@@ -1,3 +1,7 @@
+2005-12-16  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/environ.py (Library, Library.__init__): improve doc string
+
 === kiwi 1.9.3 ===
 2005-12-15  Johan Dahlin  <jdahlin@async.com.br>
 
